# OttoMatic

./: .gitignore  .gitmodules  BUILD.md  CHANGELOG.md  CHEATS.md  CMakeLists.txt  COMMANDLINE.md  Otto Matic Strategy Guide.doc  README.md  SECRETS.md  build.py
.github/workflows/: FullCompileCheck.yml  ReleaseBuilds.yml
3DMF/: BeeWoman.3df  Blob.3df  Corn.3df  IceCube.3df  MutantRobot.3df  Otto.3df  Turtle.3df
Data/Audio/: Apocalypse.sounds.rsrc  Bonus.sounds.rsrc  BrainBoss.sounds.rsrc  Cloud.sounds.rsrc  Farm.sounds.rsrc  FireIce.sounds.rsrc  HighScoreSong.aif  Jungle.sounds.rsrc  Lose.sounds.rsrc  LoseSong.aif  Main.sounds.rsrc  Menu.sounds.rsrc  Saucer.sounds.rsrc  Slime.sounds.rsrc
Data/Audio/Apocalypse.sounds/: DebrisSmash.aiff  DoorClankClose.aiff  DoorClankOpen.aiff  ManholeBlast.aiff  ManholeRoll.aiff  MineExplosion.aiff  MutantGrowl.aiff  MutantRobotShoot.aiff  PodBuzz.aiff  PodCrash.aiff  PodWorm.aiff  Teleport.aiff  TeleporterDrone.aiff
Data/Audio/Bonus.sounds/: PointBeep.aiff
Data/Audio/BrainBoss.sounds/: BrainBossDie.aiff  BrainBossShoot.aiff  BrainPain.aiff  BrainStatic.aiff  PortalBoom.aiff
Data/Audio/Cloud.sounds/: BalloonPop.aiff  BirdBombBoom.aiff  BombDrop.aiff  BumperCarHum.aiff  BumperHit.aiff  BumperPoleBreak.aiff  BumperPoleHum.aiff  BumperPoleOff.aiff  BumperPoleTap.aiff  CannonFire.aiff  ClownBubblePop.aiff  ConfettiBoom.aiff  FishBoom.aiff  InflateBalloon.aiff  RocketSled.aiff  TrapDoor.aiff  Yaaa.aiff
Data/Audio/Farm.sounds/: CornCrunch.aiff  MetalCrash.aiff  MetalGateHit.aiff  OnionSplat.aiff  OnionSwoosh.aiff  PopcornPop.aiff  ShootCorn.aiff  TomatoJump.aiff  TomatoSplat.aiff  Tractor.aiff  WoodDoorHit.aiff  WoodGateSmash.aiff
Data/Audio/FireIce.sounds/: DrillBotWhine.aiff  DrillBotWhineHi.aiff  HammerSqueak.aiff  IceCrack.aiff  MetalHit.aiff  MetalHit2.aiff  PillarCrunch.aiff  RobotExplode.aiff  SaucerHatch.aiff  SledExplode.aiff  SplatHit.aiff  SquooshyShoot.aiff  (+2 more)
Data/Images/: Title
Data/Models/: bonus.bg3d  global.bg3d  highscores.bg3d  level10_brainboss.bg3d  level1_farm.bg3d  level2_slime.bg3d  level3_blobboss.bg3d  level5_cloud.bg3d  level6_jungle.bg3d  level8_fireice.bg3d  level9_saucer.bg3d  losescreen.bg3d  winscreen.bg3d
Data/Skeletons/: BeeWoman.bg3d  BeeWoman.skeleton.rsrc  Blob.bg3d  Blob.skeleton.rsrc  BrainAlien.bg3d  BrainAlien.skeleton.rsrc  Clown.3df  Clown.bg3d  Clown.skeleton.rsrc  ClownFish.bg3d  ClownFish.skeleton.rsrc  Clownfish.3df  Corn.bg3d  Corn.skeleton.rsrc  EliteBrainAlien.3df  EliteBrainAlien.bg3d  EliteBrainAlien.skeleton.rsrc  Farmer.3df  Farmer.bg3d  Farmer.skeleton.rsrc  Flamester.3df  Flamester.bg3d  Flamester.skeleton.rsrc  GiantLizard.3df  GiantLizard.bg3d  GiantLizard.skeleton.rsrc  IceCube.bg3d  IceCube.skeleton.rsrc  Mantis.3df  Mantis.bg3d  Mantis.skeleton.rsrc  Mutant.3df  Mutant.bg3d  Mutant.skeleton.rsrc  MutantRobot.bg3d  MutantRobot.skeleton.rsrc  Onion.3df  Onion.bg3d  Onion.skeleton.rsrc  Otto.bg3d  (+26 more)
Data/Sprites/: fence.sprites  helpfont.sprites  infobar.sprites  level10_brainboss.sprites  level4_apocalypse.sprites  level8_fireice.sprites  levelIntro.sprites  lose.sprites  particle.sprites  spheremap.sprites
Data/System/: Application.rsrc  Strings_English.txt  Strings_French.txt  Strings_German.txt  Strings_Italian.txt  Strings_Spanish.txt  Strings_Swedish.txt  font.sfl  font.tga  font2.tga  legal.tga  strings.csv  strings.tsv  strings_de.txt  strings_en.txt  strings_es.txt  strings_fr.txt  strings_it.txt  strings_sv.txt
Data/Terrain/: Apocalypse.ter.rsrc  BlobBoss.ter  BlobBoss.ter.rsrc  BlobWorld.ter.rsrc  BrainBoss.ter  BrainBoss.ter.rsrc  Cloud.ter  Cloud.ter.rsrc  EarthFarm.ter.rsrc  FireIce.ter.rsrc  Jungle.ter.rsrc  JungleBoss.ter  JungleBoss.ter.rsrc  Saucer.ter.rsrc
cmake/: FindSDL2.cmake  OttoMatic.icns
packaging/: OttoMatic.exe.rc  OttoMatic.icns  ReadMe-Win32.txt.in  ReadMe.txt.in  dmg_DS_Store  gon-config.json  io.jor.ottomatic.appdata.xml  io.jor.ottomatic.desktop  ottomatic.desktop  save.icns
packaging/oldicons/: OttoMatic.icns
rawdata/: extract_sprites.py
rawdata/3DMF/: BrainAlien.3df  SkirtLady.3df  SlimeTree.3df  Squooshy.3df  Strongman.3df
rawdata/Sprites/: bonus.sprites  global.sprites  highscores.sprites  level1_farm.sprites  level2_slime.sprites  level5_cloud.sprites  level6_jungle.sprites
src/: Boot.cpp  Main.cpp  serialVerify.h
src/3D/: 3DMath.c  Camera.c  MetaObjects.c  OGL_Functions.c  OGL_Support.c  Sprites.c  TextMesh.c  bg3d.c
src/Effects/: Effects.c  Shards.c  Sky.c  Sparkle.c  VaporTrails.c
src/Enemies/: Enemy.c  Enemy_BrainAlien.c  Enemy_BrainBoss.c  Saucer.c
src/Headers/: 3dmath.h  MyPCH_Demo.pch  MyPCH_Normal.pch  MyPCH_OEM.pch  Prefix_OEM.h  Structs.h  bg3d.h  bones.h  camera.h  checkpoints.h  collision.h  effects.h  enemy.h  fences.h  file.h  game.h  globals.h  humans.h  infobar.h  input.h  internet.h  items.h  languagestrings.h  localization.h  lzss.h  main.h  mainmenu.h  menu.h  metaobjects.h  misc.h  miscscreens.h  mobjTypes.h  mobjtypes.h  modescreen.h  mousesmoothing.h  mytraps.h  objects.h  ogl_functions.h  ogl_support.h  player.h  (+22 more)
src/Humans/: BeeWoman.c  Farmer.c  Humans.c  Scientist.c  SkirtLady.c
src/Items/: BumperCar.c  HumanCannonball.c  Humans.c  IceSaucer.c  Items.c  Powerups.c  RocketSled.c  SpacePods.c  Teleporter.c  Traps.c  Traps2.c  Triggers.c  Triggers2.c  Volcano.c  ZipLine.c  items2.c
src/Player/: Player.c  Player_Robot.c  Player_Saucer.c  Player_Weapons.c
src/Screens/: BonusScreen.c  Failed.c  FileScreen.c  HighScores.c  Infobar.c  LevelCheat.c  LevelIntros.c  LoseScreen.c  MainMenu.c  MiscScreens.c  Paused.c  SettingsScreen.c  WarpCheat.c  WinScreen.c
src/Skeleton/: Bones.c  SkeletonAnim.c  SkeletonJoints.c  SkeletonObj.c
src/System/: Collision.c  File.c  GameMain.c  Input.c  InputDefaults.c  InputMacLinearMouse.c  Internet.c  KillMacMouseAcceleration.c  LZSS.c  LanguageStrings.c  Localization.c  Main.c  Menu.c  Misc.c  MouseSmoothing.c  Objects.c  Objects2.c  Sound.c  TGA.c  Window.c  Windows.c  input.c
src/Terrain/: Fences.c  SplineItems.c  Terrain.c  Terrain2.c  Water.c
(+265 files in other folders)
